--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     tools:context="com.iamwent.tinter.MainActivity">
 
     <include layout="@layout/toolbar" />
@@ -12,12 +13,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        >
 
         <TextView
+            android:id="@+id/tv_sdk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!" />
+            android:padding="16dp"
+            android:background="@color/colorAccent"
+            />
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
