--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,4 +11,8 @@
         <item name="windowNoTitle">true</item>
 
     </style>
+
+    <style name="AppTheme.FitsSystemWindows">
+        <item name="android:fitsSystemWindows">true</item>
+    </style>
 </resources>
