--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="appbar_top_padding">0dp</dimen>
+    <dimen name="content_top_margin">0dp</dimen>
 </resources>
